--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <ul class="lista-menu">
                 <li class="lista-menu__titulo">Categorias</li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">???????</a>
+                    <a href="#" class="lista-menu__link">investindo do zero</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">????????</a>
+                    <a href="#" class="lista-menu__link">tesouro selic</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">??????????</a>
+                    <a href="#" class="lista-menu__link">açoes e fundos imobiliarios</a>
                 </li>
             </ul>
             <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
@@ -33,6 +33,8 @@
             <!-- ???????? -->
         </div>
     </header>
+
+    <div><img src="img/kk" alt=""></div>
     
 </body>
 </html>
