--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>?????????</title>
-    <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -28,13 +27,15 @@
             </ul>
             <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
         </div> 
-        <!-- ???????? -->
+        <!-- invest mk -->
         <div class="container">
-            <!-- ???????? -->
+            <!-- investindo -->
         </div>
     </header>
 
     <div><img src="img/kk" alt=""></div>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
     
 </body>
 </html>
